--- a/client/public/index.html
+++ b/client/public/index.html
@@ -50,9 +50,12 @@
       crossorigin="anonymous"
     />
 
-    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;700&display=swap" rel="stylesheet">
+    <link
+      href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;700&display=swap"
+      rel="stylesheet"
+    />
 
-    <title>ACM ICPC 2021 Regional | University Of Dhaka</title>
+    <title>ACM ICPC 2020 Regional | University Of Dhaka</title>
   </head>
   <body>
     <div id="root"></div>
