--- a/client/public/index.html
+++ b/client/public/index.html
@@ -70,7 +70,7 @@
       crossorigin="anonymous"
     />
 
-    <title>ACM ICPC 2020 Regional | University Of Dhaka</title>
+    <title>ICPC 2020 Regional | University Of Dhaka</title>
   </head>
   <body>
     <div id="root"></div>
